modify files for ghpages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dessertsmvc-react",
-  "homepage": "http://sarafec.github.io/dessertsMVC-React",
+  "homepage": "https://sarafec.github.io/dessertsMVC-React",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,8 @@
     "react-scripts": "1.0.10"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
